--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
+    "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
